--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@
 
 .widget__forecast {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: column;
 }
 
 .widget__day-item {
